tests/fixtures/coflow/invalid/lex/string-invalid-escape-zero.cf
text = "bad \0 escape"
